--- a/install_apache.yml
+++ b/install_apache.yml
@@ -1,55 +1,23 @@
 ---
 
-- hosts: all
-  become: true
-  tasks:
+ - hosts: all
+   become: true
+   tasks:
 
-  - name: update repository index
-    apt:
-      update_cache: yes
-    when: ansible_distribution == "Ubuntu"
+   - name: install apache and php for Ubuntu servers
+     apt:
+       name:
+         - apache2
+         - libapache2-mod-php
+       state: latest
+       update_cache: yes
+     when: ansible_distribution == "Ubuntu"
 
-  - name: install apache2 package
-    apt:
-      name: apache2
-      state: latest
-    when: ansible_distribution == "Ubuntu"
-
-  - name: add php support for apache
-    apt:
-      name: libapache2-mod-php
-      state: latest
-    when: ansible_distribution == "Ubuntu"
-
-  - name: update repository index
-    dnf:
-      update_cache: yes
-    when: ansible_distribution == "CentOS"
-
-  - name: install httpd package on CentOS
-    dnf:
-      name: httpd
-      state: latest
-    when: ansible_distribution == "CentOS"
-
-  - name: add php support for apache on CentOS
-    dnf:
-      name: php
-      state: latest
-    when: ansible_distribution == "CentOS"
-
-  - name: Enable service to start on bootup
-    service:
-      name: httpd
-      state: started
-    when: ansible_distribution == "CentOS"
-
-  - name: Create firewall rule for apache service
-    firewalld:
-      service: http
-      zone: public
-      permanent: yes
-      immediate: yes
-      state: enabled
-    when: ansible_distribution == "CentOS"
-    
+   - name: install apache and php for CentOS servers
+     dnf:
+       name:
+         - httpd
+         - php
+       state: latest
+       update_cache: yes
+     when: ansible_distribution == "CentOS"
