--- a/site.yml
+++ b/site.yml
@@ -1,15 +1,18 @@
 ---
+
  - hosts: all
    become: true
    pre_tasks:
  
    - name: install updates (CentOS)
+     tags: always
      dnf:
        update_only: yes
        update_cache: yes
      when: ansible_distribution == "CentOS"
  
    - name: install updates (Ubuntu)
+     tags: always
      apt:
        upgrade: dist
        update_cache: yes
@@ -20,15 +23,8 @@
    become: true
    tasks:
  
-   - name: install apache and php for Ubuntu servers
-     apt:
-       name:
-         - apache2
-         - libapache2-mod-php
-       state: latest
-     when: ansible_distribution == "Ubuntu"
- 
-   - name: install apache and php for CentOS servers
+   - name: install httpd package (CentOS)
+     tags: apache,centos,httpd
      dnf:
        name:
          - httpd
@@ -36,17 +32,53 @@
        state: latest
      when: ansible_distribution == "CentOS"
 
+   - name: Enable service to start on bootup for CentOS
+     service:
+      name: httpd
+      state: started
+     when: ansible_distribution == "CentOS"
+
+   - name: Create firewall rule for apache service for for CentOS
+     firewalld:
+      service: http
+      zone: public
+      permanent: yes
+      immediate: yes
+      state: enabled
+     when: ansible_distribution == "CentOS"
+
+ 
+   - name: install apache2 package (Ubuntu)
+     tags: apache,apache2,ubuntu
+     apt:
+       name:
+         - apache2
+         - libapache2-mod-php
+       state: latest
+     when: ansible_distribution == "Ubuntu"
+ 
+   - name: copy html file for site
+     tags: apache,apache,apache2,httpd
+     copy:
+       src: default_site.html
+       dest: /var/www/html/index.html
+       owner: root
+       group: root
+       mode: 0644
+ 
  - hosts: db_servers
    become: true
    tasks:
  
-   - name: install httpd package (CentOS)
+   - name: install mariadb server package (CentOS)
+     tags: centos,db,mariadb
      dnf:
        name: mariadb
        state: latest
      when: ansible_distribution == "CentOS"
  
    - name: install mariadb server
+     tags: db,mariadb,ubuntu
      apt:
        name: mariadb-server
        state: latest
